data/issues_nolabel/nolabel_test_15108.txt
error: namespace "Eigen::half_impl" has no member "__half_raw" when building latest TensorFlow/CUDA 9.0

When trying to build latest TensorFlow for CUDA 9.0/CuDNN 7.0, from today's head
Complete instructions to reproduce are here, but basically I followed steps in in Dockerfile.devel-gpu to install dependencies, and then did bazel build -c opt --config=cuda
Here are the errors
INFO: From Compiling tensorflow/stream_executor/cuda/cuda_blas.cc:
tensorflow/stream_executor/cuda/cuda_blas.cc: In function 'cudaDataType_t perftools::gputools::cuda::{anonymous}::CUDAComputationType(perftools::gputools::blas::ComputationType)':
tensorflow/stream_executor/cuda/cuda_blas.cc:527:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
INFO: From Compiling tensorflow/core/kernels/dense_to_sparse_batch_dataset_op.cc:
tensorflow/core/kernels/dense_to_sparse_batch_dataset_op.cc: In member function 'virtual void tensorflow::{anonymous}::DenseToSparseBatchDatasetOp::MakeDataset(tensorflow::OpKernelContext*, tensorflow::DatasetBase*, tensorflow::DatasetBase**)':
tensorflow/core/kernels/dense_to_sparse_batch_dataset_op.cc:83:71: warning: 'batch_size' may be used uninitialized in this function [-Wmaybe-uninitialized]
         : batch_size_(batch_size), row_shape_(row_shape), input_(input) {
                                                                       ^
tensorflow/core/kernels/dense_to_sparse_batch_dataset_op.cc:41:11: note: 'batch_size' was declared here
     int64 batch_size;
           ^
INFO: From Compiling tensorflow/core/kernels/histogram_op_gpu.cu.cc:
./tensorflow/core/util/cuda_kernel_helper.h(109): error: namespace "Eigen::half_impl" has no member "__half_raw"

./tensorflow/core/util/cuda_kernel_helper.h(109): error: expected a ")"

./tensorflow/core/util/cuda_kernel_helper.h(110): error: namespace "Eigen::half_impl" has no member "__half_raw"

./tensorflow/core/util/cuda_kernel_helper.h(113): error: namespace "Eigen::half_impl" has no member "__half_raw"

./tensorflow/core/util/cuda_kernel_helper.h(113): error: expected a ";"

./tensorflow/core/util/cuda_kernel_helper.h(119): error: namespace "Eigen::half_impl" has no member "__half_raw"

./tensorflow/core/util/cuda_kernel_helper.h(119): error: expected a ")"

./tensorflow/core/util/cuda_kernel_helper.h(120): error: namespace "Eigen::half_impl" has no member "__half_raw"

./tensorflow/core/util/cuda_kernel_helper.h(123): error: namespace "Eigen::half_impl" has no member "__half_raw"

./tensorflow/core/util/cuda_kernel_helper.h(123): error: expected a ";"

10 errors detected in the compilation of "/tmp/tmpxft_000137d9_00000000-6_histog